manifests/elasticsearch-kibana/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: elasticsearch
  namespace: elastic-system
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - elastic.${ECK_DOMAIN}
    secretName: elastic-cert
  rules:
  - host: elastic.${ECK_DOMAIN}
    http:
      paths:
        - path: /
          backend:
            serviceName: elasticsearch-es-http
            servicePort: 9200
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana
  namespace: elastic-system
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - kibana.${ECK_DOMAIN}
    secretName: kibana-cert
  rules:
  - host: kibana.${ECK_DOMAIN}
    http:
      paths:
        - path: /
          backend:
            serviceName: kibana-kb-http
            servicePort: 5601
